--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,27 +9,5 @@
         "APPNAME":true, "VERSION":true, "PRODUCTION":true,
 				"BUILD_AS_MODULE":true
     },
-    "extends": "./node_modules/eslint-xbsoftware/1__double_quotes_and_tabs/.eslintrc",
-    "parserOptions": {
-        "sourceType": "module",
-        "ecmaVersion": 6,
-        "ecmaFeatures": {
-            "experimentalObjectRestSpread": true
-        }
-    },
-    "rules": {
-        "indent": [
-            "error",
-            "tab",
-            {"SwitchCase":1}
-        ],
-        "quotes": [
-            "error",
-            "double"
-        ],
-        "semi": [
-            "error",
-            "always"
-        ]
-    }
+    "extends": "./node_modules/eslint-xbsoftware/1__double_quotes_and_tabs/.eslintrc"
 }
