--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.0",
     "css-loader": "^0.28.7",
-    "eslint": "^4.19.1",
-    "eslint-plugin-import": "^2.16.0",
+    "eslint": "^5.14.1",
+    "eslint-plugin-import": "2.14.0",
     "eslint-xbsoftware": "git+https://bitbucket.org/xbsltd/eslint.git",
     "file-loader": "^0.11.2",
     "less": "^2.7.2",
